根据过敏源获取过敏儿童
